# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-05-31 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add preliminary service configuration update with services_update
    * Add dest_refresh, dest_list_deny, dest_list_allow to services_update
    * Allow timeout_init for internal services with services_update

2016-05-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add some options parsing for services_update input

2016-05-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add CloudI Service API services_update external service functionality
    * Fix text_pairs format for HTTP GET query strings in
      cloudi_service_http_cowboy and cloudi_service_http_elli

2016-05-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix aspect function validation
    * Update key2value

2016-05-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix services_update modules_unload
    * Update reltool_util

2016-05-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add CT test of services_update
    * Change services_update to not load the module of an
      internal service by default
    * Add the new module version to the update function for services_update
    * Fix services_update error when a process is handling a service request
    * Finalize services_update return value
    * Add sync configuration option for services_update
    * Fix services_update when using sync == false with module_state assigned

2016-05-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add CloudI Service API services_update function
      (currently, only for updating internal services)
    * Update trie, reltool_util

2016-05-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Remove unmaintained example services and their dependencies:
        * cloudi_service_db
        * cloudi_service_timers
    * Do not run the integration tests by default
    * Add sensitive, max_heap_size and message_queue_data to both